[gd_scene format=3 uid="uid://clnf86bglf40d"]

[ext_resource type="Script" uid="uid://dgtp6vsyrysk1" path="res://glass_cabinet/glass_cabinet.gd" id="1_2v0m0"]
[ext_resource type="PackedScene" uid="uid://ces3a6yv0c5fi" path="res://moving_carmera_light/moving_camera_light.tscn" id="2_71gvw"]
[ext_resource type="PackedScene" uid="uid://dl14flc0fkeyt" path="res://axis_arrow_3d/axis_arrow_3d.tscn" id="3_nkhty"]
[ext_resource type="PackedScene" uid="uid://cfnbpemvoy1i6" path="res://multi_mesh_shape/multi_mesh_shape.tscn" id="4_2eiwf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 1, 0.49803922)

[sub_resource type="BoxMesh" id="BoxMesh_nkhty"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ig7tw")
flip_faces = true

[sub_resource type="MultiMesh" id="MultiMesh_2eiwf"]
resource_local_to_scene = true

[sub_resource type="MultiMesh" id="MultiMesh_6tr68"]
resource_local_to_scene = true

[node name="GlassCabinet" type="Node3D" unique_id=382686767]
script = ExtResource("1_2v0m0")

[node name="WallBox" type="MeshInstance3D" parent="." unique_id=1488685636]
mesh = SubResource("BoxMesh_nkhty")

[node name="FixedCameraLight" parent="." unique_id=1132206210 instance=ExtResource("2_71gvw")]

[node name="AxisArrow3D" parent="." unique_id=1525573769 instance=ExtResource("3_nkhty")]
visible = false

[node name="WireBox" parent="." unique_id=383489822 instance=ExtResource("4_2eiwf")]
multimesh = SubResource("MultiMesh_2eiwf")

[node name="Points" parent="." unique_id=1022455997 instance=ExtResource("4_2eiwf")]
multimesh = SubResource("MultiMesh_6tr68")

[node name="LightContainer" type="Node3D" parent="." unique_id=1244943125]

[node name="Title" type="Label3D" parent="." unique_id=356165087]
visible = false
horizontal_alignment = 0
vertical_alignment = 0

[node name="Description" type="Label3D" parent="." unique_id=605342281]
visible = false
horizontal_alignment = 2
vertical_alignment = 2
